2003-05-06  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-pocketgames.el
	(shimbun-pocketgames-make-mime-article): Modify regexp to pick up
	url properly.

2003-05-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-fontify-anchors): Invalidate the widget keymap in
	XEmacs; add a help-echo to the widget button.
	(w3m-make-minor-mode-keymap): Bind [down-mouse-2] to `undefined'
	to invalidate the `widget-button-click' command in FSF Emacs.

2003-05-05  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-pocketgames.el
	(shimbun-pocketgames-article): New function.
	(shimbun-pocketgames-article-1): Ditto.
	(shimbun-pocketgames-make-mime-article): Ditto.
	(shimbun-pocketgames-headers): New function (Building Message-ID
	with '@' instead of `:' to display inline)
	(shimbun-pocketgames-headers-1): New function.
	(shimbun-article): Use `shimbun-pocketgames-article'.
	(shimbun-headers): Use `shimbun-pocketgames-headers'.
	(shimbun-pocketgames-comment-article): Clean up unnecessary link
	from shimbun working buffer.
	Building Message-ID with '@' instead of `:' to display inline
	images.

2003-05-04  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-plucker.el: New file.

2003-05-04  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* shimbun/sb-makanai.el (shimbun-index-url): Follow the change of
	the web site.

2003-05-03  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-squeak-dev.el: New file.

	* shimbun/sb-jpo.el (shimbun-jpo-cleanup-article): Modify regexps.

	* shimbun/sb-jpilot.el: Require sendmail.
	(shimbun-make-contents): New method.

2003-04-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-imitate-widget-button): New variable.
	(w3m-imitate-widget-button): New function.
	(w3m-fontify-anchors): Imitate the widget button.
	(w3m-next-anchor): Look for the widget button.
	(w3m-previous-anchor): Ditto.

2003-04-30  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-jpo.el (shimbun-make-contents): Bug fixed.
	(shimbun-headers): Ditto.
