@@ -1,3 +1,13 @@
+2003-05-12  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+
+	* shimbun/sb-2ch.el (shimbun-headers): Correct the wrong use of
+	`message'.  Thanks to Yoichi NAKAYAMA <yoichi@geiin.org> for his
+	suggestion.
+
+	* mime-w3m.el (mime-w3m-preview-text/html): Apply the patch posted
+	by Yoichi NAKAYAMA <yoichi@geiin.org> in [emacs-w3m:04836], that
+	correct the wrong usage of `message'.
+
 2003-05-06  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>
 
 	* shimbun/sb-pocketgames.el
